--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "spiral/encrypter": "^3.6"
     },
     "require-dev": {
+        "spiral/twig-bridge": "^2.0",
+        "nesbot/carbon": "^2.66",
         "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^9.5.27",
         "friendsofphp/php-cs-fixer": "^3.8",
