--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "phpunit/phpunit": "^9.5.27",
         "friendsofphp/php-cs-fixer": "^3.8",
         "spiral/testing": "^2.2",
-        "vimeo/psalm": "^5.8"
+        "vimeo/psalm": "^5.8",
+        "spiral/validator": "^1.3",
+        "spiral-packages/symfony-validator": "^1.3",
+        "spiral-packages/laravel-validator": "^1.1"
     },
     "autoload": {
         "psr-4": {
@@ -43,6 +46,11 @@
         "allow-plugins": {
             "spiral/composer-publish-plugin": true
         }
+    },
+    "suggest": {
+        "spiral/validator": "One of available validators to validate data in a Livewire component",
+        "spiral-packages/symfony-validator": "One of available validators to validate data in a Livewire component",
+        "spiral-packages/laravel-validator": "One of available validators to validate data in a Livewire component"
     },
     "extra": {
         "spiral": {
