--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^8.1",
         "spiral-packages/league-event": "^1.0",
         "spiral/attributes": "^3.0",
-        "spiral/encrypter": "^3.6"
+        "spiral/encrypter": "^3.6",
+        "symfony/property-access": "^5.4 || ^6.0"
     },
     "require-dev": {
         "spiral/twig-bridge": "^2.0",
@@ -20,7 +21,7 @@
         "phpunit/phpunit": "^9.5.27",
         "friendsofphp/php-cs-fixer": "^3.8",
         "spiral/testing": "^2.2",
-        "vimeo/psalm": "^5.8",
+        "vimeo/psalm": "^5.9",
         "spiral/validator": "^1.3",
         "spiral-packages/symfony-validator": "^1.3",
         "spiral-packages/laravel-validator": "^1.1"
