--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "spiral-packages/league-event": "^1.0",
         "spiral/attributes": "^3.0",
+        "spiral/scaffolder": "^3.6",
         "spiral/encrypter": "^3.6",
         "symfony/property-access": "^5.4 || ^6.0"
     },
