--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "spiral/validator": "^1.3",
         "spiral/translator": "^3.7",
         "spiral/nyholm-bridge": "^1.3",
+        "spiral/cycle-bridge": "^2.5",
         "spiral-packages/symfony-validator": "^1.3",
         "spiral-packages/laravel-validator": "^1.1"
     },
